Style update, width of in/out and status components are fixed with hidden overflow

--- a/ui/src/components/InOutSwitch/style.css
+++ b/ui/src/components/InOutSwitch/style.css
@@ -1,13 +1,8 @@
-.inout-switch-msg{ 
-  text-align: center;
-  float:left
+.inout-switch {
+  width: 7em;
 }
 
-.inout-label{ 
-  float:left;
-  font-weight: bold;
-  margin-right: 1em
+.inout-switch .badge {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-
-
-
